--- a/621Homepage.html
+++ b/621Homepage.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<a href="https://3yya.com/" target="_blank"
 			>
-            <img src="material/chenyongqi.jpg" alt="" >
+            <img src="./material/chenyongqi.jpg" alt="" >
 			</a>
 			<a href="https://3yya.com/courseware" target="_blank"
 				><img src="material/chenge.jpg" alt="" ></a>
