--- a/621Homepage.html
+++ b/621Homepage.html
@@ -21,7 +21,7 @@
 
 			<a href="https://3yya.com/course/2" target="_blank"
 				><img src="material/huzhihan.png" alt="" /></a>
-            <a href="https://3yya.com/course/2" target="_blank"
+            <a href="https://wumingzhitu.github.io/freshman-project/ghy.html" target="_blank"
 				><img src="material/personal.jpg" alt=""  /></a>
 		</div>
 		<div class="shift">
