--- a/621Homepage.html
+++ b/621Homepage.html
@@ -14,14 +14,14 @@
 		<div class="container">
 			<a href="https://3yya.com/" target="_blank"
 			>
-            <img src="./material/chenyongqi.jpg" alt="" >
+            <img src="material/chenyongqi.jpg" alt="" >
 			</a>
 			<a href="https://3yya.com/courseware" target="_blank"
 				><img src="material/chenge.jpg" alt="" ></a>
 
 			<a href="https://3yya.com/course/2" target="_blank"
 				><img src="material/huzhihan.png" alt="" /></a>
-            <a href="https://wumingzhitu.github.io/freshman-project/ghy.html" target="_blank"
+            <a href="https://3yya.com/course/2" target="_blank"
 				><img src="material/personal.jpg" alt=""  /></a>
 		</div>
 		<div class="shift">
@@ -41,7 +41,7 @@
           <tr>
             <td><a href="https://abigpigishere.github.io/"><img src="material/chenge.jpg" alt="" class="GFG"></a></td>
             <td style="color: rgb(233, 233, 51);font-size: 15px;"><a href="" style="color: rgb(229, 238, 58);">点击此处进入班级主页</a></td>
-            <td><img src="material/personal.jpg" alt="" class="GFG"></td>
+            <td><a href="https://wumingzhitu.github.io/freshman-project/ghy.html"><img src="material/personal.jpg" alt="" class="GFG"></a></td>
           </tr>
           <tr>
             <td style="text-align: right; color: rgb(233, 233, 51); font-size: 25px;">点击该图进入<b>胡智涵</b>主页<b>&#8594;</b></td>
