--- a/621Homepage.html
+++ b/621Homepage.html
@@ -12,16 +12,16 @@
 <body background="material/621bg.jpg">
 	<div class="carousel">
 		<div class="container">
-			<a href="https://3yya.com/" target="_blank"
+			<a href="https://chenyq817.github.io/chenyq817/" target="_blank"
 			>
             <img src="material/chenyongqi.jpg" alt="" >
 			</a>
-			<a href="https://3yya.com/courseware" target="_blank"
+			<a href="https://abigpigishere.github.io/" target="_blank"
 				><img src="material/chenge.jpg" alt="" ></a>
 
-			<a href="https://3yya.com/course/2" target="_blank"
+			<a href="https://hzhdyzx.github.io/myweb" target="_blank"
 				><img src="material/huzhihan.png" alt="" /></a>
-            <a href="https://3yya.com/course/2" target="_blank"
+            <a href="https://wumingzhitu.github.io/freshman-project/ghy.html" target="_blank"
 				><img src="material/personal.jpg" alt=""  /></a>
 		</div>
 		<div class="shift">
