--- a/621Homepage.html
+++ b/621Homepage.html
@@ -40,7 +40,8 @@
           </tr>
           <tr>
             <td><a href="https://abigpigishere.github.io/"><img src="material/chenge.jpg" alt="" class="GFG"></a></td>
-            <td style="color: rgb(233, 233, 51);font-size: 15px;"><a href="" style="color: rgb(229, 238, 58);">点击此处进入班级主页</a></td>
+            <td style="color: rgb(233, 233, 51);font-size: 15px;"><a href="https://wangzexin2309.github.io/%E7%8F%AD%E7%BA%A7%E6%88%90%E5%91%98%E9%A1%B5.html
+" style="color: rgb(229, 238, 58);">点击此处进入班级主页</a></td>
             <td><a href="https://wumingzhitu.github.io/freshman-project/ghy.html"><img src="material/personal.jpg" alt="" class="GFG"></a></td>
           </tr>
           <tr>
