--- a/ghy.html
+++ b/ghy.html
@@ -134,7 +134,8 @@ footer img{
 <body background="material/background.jpg" >
 	<div id="mySidenav" class="sidenav">
 	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	<a href="">班级主页</a>
+	<a href="https://wangzexin2309.github.io/%E7%8F%AD%E7%BA%A7%E6%88%90%E5%91%98%E9%A1%B5.html
+">班级主页</a>
 	<a href="621Homepage.html">寝室主页</a>
 	<a href="合战.html">合战忍者村</a>
 	<a href="游戏.html">游戏发展国</a>
